<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/regback"
    tools:context=".ForgotPasswordActivity">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/glass_morph">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/reset_password"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <EditText
                android:id="@+id/etRestPass"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Continue" />
            <TextView
                android:id="@+id/tvLoginback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back_to_login"/>


        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
